Set z-index: 1100 in shadow box, to hide bootstrap 'navbar-fixed-top'. Make refactor code according pep8.

--- a/bviewer/core/static/core/css/shadowbox.css
+++ b/bviewer/core/static/core/css/shadowbox.css
@@ -10,7 +10,7 @@
     padding: 0;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 1100;
     text-align: left;
     visibility: hidden;
     display: none;
